Fixed spacing issue with hamburger menu in mobile mode.

--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,9 @@ header .logo {
     background-color: #396E94;
 }
 
+a.blanklink {
+    display: none;
+}
 #logo_link {
     padding-top: 5px;
     justify-self: center;
@@ -236,6 +239,8 @@ main section img {
     box-shadow: 5px 5px 10px #6f7364;
     width: 100%;
 } */
+
+
 /*Project CSS*/
 
 .projVid {
@@ -275,6 +280,8 @@ main section img {
     color: #FB62F6;
     background-color: #396E94;
 }
+
+
 /*TA CSS*/
 .ta-info {
     grid-column: 3/5;
@@ -479,6 +486,12 @@ footer h3 a:hover {
         display: block;
         text-align: left;
       }
+      .topnav.responsive.blanklink a {
+        float: none;
+        display: block;
+        text-align: left;
+        margin-top: 50px;
+      }
       .topnav.responsive .dropdown {float: none;}
       .topnav.responsive .dropdown-content {position: relative;}
       .topnav.responsive .dropdown .dropbtn {
@@ -486,6 +499,12 @@ footer h3 a:hover {
         width: 100%;
         text-align: left;
       }
+      .topnav.responsive .dropdown-content {
+        display: block;
+        width: 100%;
+        text-align: left;
+      }
+
     footer {
         flex-direction: column;
         text-align: center;
